--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com"
+baseurl = "https://matsuhaya.github.io/"
 languageCode = "ja"
 title = "lowkeyblog"
 theme = "kiss"
